sise-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: sise-deploy
spec:
 replicas: 2
 selector:
   matchLabels:
     app: sise
 template:
   metadata:
     labels:
       app: sise
   spec:
     containers:
     - name: sise
       image: mhausenblas/simpleservice:0.5.0
       ports:
       - containerPort: 9876
